# hash

./: .gitignore  hacs.json  pyproject.toml  readme.md  requirements_test.txt
.github/workflows/: validate.yml
custom_components/hash/: __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  panel.py  scheduler.py  sensor.py  services.yaml  strings.json  websocket.py
custom_components/hash/translations/: de.json  fr.json  nl.json
custom_components/hash/www/: hash-panel.js
tests/: conftest.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_init.py  test_scheduler.py  test_sensor.py
