[project]
name = "hash"
version = "1.0.0"
description = "HASH - Home Assistant Sweeping Hub"
requires-python = ">=3.13.2"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",      # No docstrings required in tests
    "S101",   # Allow assert in tests
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.hash"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
